@@ -249,6 +249,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 17799) Special:Random no longer throws a database error when a non-
   namespace is given, silently falls back to NS_MAIN
 * (bug 17751) The message for bad titles in WantedPages is now localized
+* (bug 17860) Moving a page in the "MediaWiki" namespace using SuppressRedirect
+  no longer corrupts the message cache
 
 == API changes in 1.15 ==
 * (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
